--- a/standOut/build.gradle
+++ b/standOut/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.library'
 android {
-    compileSdkVersion 23
+    compileSdkVersion 28
     buildToolsVersion "23.0.2"
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 28
     }
     buildTypes {
         release {
@@ -14,8 +14,11 @@ android {
     }
     productFlavors {
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:support-v4:28.0.0'
 }
